2009-11-30	The InnoDB Team

	* dict/dict0crea.c, dict/dict0mem.c, dict/dict0load.c,
	dict/dict0boot.c, fil/fil0fil.c, handler/ha_innodb.cc,
	include/dict0mem.h, row/row0mysql.c:
	Fix the bogus warning messages for non-existing temporary
	tables that were reported in
	Bug#41609 Crash recovery does not work for InnoDB temporary tables.
	The actual crash recovery bug was corrected on 2009-04-29.

2009-11-27	The InnoDB Team

	InnoDB Plugin 1.0.6 released

2009-11-20	The InnoDB Team

	* handler/ha_innodb.cc:
	Add a workaround to prevent a crash due to Bug#45961 DDL on
	partitioned innodb tables leaves data dictionary in an inconsistent
	state

2009-11-19	The InnoDB Team

	* btr/btr0btr.c:
	Fix Bug#48469 when innodb tablespace is configured too small, crash
	and corruption!

2009-11-19	The InnoDB Team

	* data/data0type.c:
	Fix Bug#48526 Data type for float and double is incorrectly reported
	in InnoDB table monitor

2009-11-19	The InnoDB Team

	* CMakeLists.txt:
	Fix Bug#48317 cannot build innodb as static library

2009-11-18	The InnoDB Team

	* handler/handler0alter.cc:
	Fix Bug#48782 On lock wait timeout, CREATE INDEX (creating primary key)
	attempts DROP TABLE

2009-11-17	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb.result,
	mysql-test/innodb.test, mysql-test/innodb_bug44369.result,
	mysql-test/innodb_bug44369.test, mysql-test/patches/innodb-index.diff,
	row/row0mysql.c:
	Report duplicate table names to the client connection, not to the
	error log.

2009-11-12	The InnoDB Team

	* handler/ha_innodb.cc, include/db0err.h, row/row0merge.c,
	row/row0mysql.c:
	Allow CREATE INDEX to be interrupted.
	Also, when CHECK TABLE is interrupted, report ER_QUERY_INTERRUPTED.

2009-11-11	The InnoDB Team

	* handler/ha_innodb.cc, mysql-test/innodb_bug47167.result,
	mysql-test/innodb_bug47167.test, mysql-test/innodb_file_format.result:
	Fix Bug#47167 "set global innodb_file_format_check" cannot set value
	by User-Defined Variable

2009-11-11	The InnoDB Team
